--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link
+      rel="shortcut icon"
+      href="images/icons/favicon.svg"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;600;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a href="#menu" class="header__menu-link">
+            <img
+              src="images/icons/icon-burger-menu.svg"
+              alt="Menu icon"
+              class="header__menu-icon"
+            >
+          </a>
+
+          <a href="#" class="header__logo-link">
+            <p class="header__logo">NA<br>MU</p>
+          </a>
+
+          <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
+
+          <div class="header__tickets">
+            <div class="tickets">
+              <p class="tickets__text">КВИТКИ</p>
+              <a href="#" class="tickets__link">
+                <img
+                  src="images/icons/icon-vector.svg"
+                  alt="Vector icon"
+                  class="tickets__vector"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="header__events">
+            <a href="#" class="events">
+              <hr class="events__line">
+              <p class="events__text">ПОДІЇ</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
