--- a/src/index.html
+++ b/src/index.html
@@ -223,30 +223,30 @@
               </p>
             </div>
           </article>
+        </div>
+      </div>
+    </section>
 
-          <article class="event event__card-lecture">
-            <img
-              class="event__picture-lecture"
-              src="./images/events/event-3.png"
-              alt="Від класицизму до романтизму"
-            >
+    <section class="lecture">
+      <img
+        class="lecture__picture"
+        src="./images/events/event-3.png"
+        alt="Від класицизму до романтизму"
+      >
 
-            <div class="event__description-lecture">
-              <div class="event__day event__day-lecture">
-                <p class="event__type">
-                  ЛЕКЦІЯ
-                </p>
-
-                <p class="event__date">
-                  26/08/2019 - 11:00
-                </p>
-              </div>
-
-              <h3 class="event__title-lecture">
-                <a href="#" class="event__link">Від класицизму до романтизму</a>
-              </h3>
-            </div>
-          </article>
+      <div class="container">
+        <div class="lecture__description">
+          <div class="lecture__day">
+            <p class="lecture__type">
+              ЛЕКЦІЯ
+            </p>
+            <p class="lecture__date">
+              26/08/2019 - 11:00
+            </p>
+          </div>
+          <h3 class="lecture__title">
+            <a href="#" class="lecture__link">Від класицизму до романтизму</a>
+          </h3>
         </div>
       </div>
     </section>
