add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua" class="page">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,10 +125,14 @@
           <div class="relevant__exhibition">
             <div class="relevant__image relevant__image--second"></div>
             <div class="relevant__info">
-              <p class="relevant__info-date">ВИСТАВКА
+              <!-- <p class="relevant__info-date">ВИСТАВКА
                 <span class="relevant__info-date-span">26.08-29.11.2019</span>
-              </p>
-              <h3 class="relevant__text-title">І спогади і мрії</h3>
+              </p> -->
+              <div class="relevant__content">
+                <p class="relevant__info-title">ВИСТАВКА</p>
+                <p class="relevant__info-dates">26.08-29.11.2019</p>
+              </div>
+              <h3 class="relevant__text-title relevant__text-title_retreat">І спогади і мрії</h3>
               <p class="relevant__text">
                 Національний художній музей України до 100 річчя від дня народження
                 видатної української художниці  Тетяни Яблонської  відкриває
