commit with grid problem

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link
     rel="icon"
     type="image/x-icon"
-    href="./images/icons:logo/NA MU logo.svg"
+    href="./images/icons-logo/NA-MU logo.svg"
   >
     <!-- Montserrat, sans-serif -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
 
             <a href="#" class="header__logo-link">
               <img
-                src="./images/icons:logo/NA MU logo.svg"
+                src="./images/icons-logo/NA-MU logo.svg"
                 alt="NA MU logo"
                 class="header__logo logo"
               >
@@ -148,7 +148,7 @@
           <div class="current-events__content">
             <article class="current-events__event event event--1">
               <img
-                src="./images/actual /actual-img-1.png"
+                src="./images/actual/actual-img-1.png"
                 alt="Йду і повертаюсь"
                 class="event__img event__img--1"
               >
@@ -175,7 +175,7 @@
 
             <article class="current-events__event event event--2">
               <img
-                src="./images/actual /actual-img-2.png"
+                src="./images/actual/actual-img-2.png"
                 alt="І спогади і мрії"
                 class="event__img event__img--2"
               >
@@ -203,7 +203,7 @@
 
         <article class="current-events__event event event--3">
           <img
-            src="./images/actual /actual-img-3.png"
+            src="./images/actual/actual-img-3.png"
             alt="Sky picture"
             class="event__img event__img--3"
           >
@@ -341,7 +341,7 @@
             <div class="CTA__icons-and-logo">
               <a href="#top" class="CTA__logo-link">
                 <img
-                  src="./images/icons:logo/NA MU logo.svg"
+                  src="./images/icons-logo/NA-MU logo.svg"
                   alt="NA MU logo"
                   class="CTA__logo logo"
                 >
