add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,6 @@
           <div class="relevant__exhibition">
             <div class="relevant__image relevant__image--second"></div>
             <div class="relevant__info">
-              <!-- <p class="relevant__info-date">ВИСТАВКА
-                <span class="relevant__info-date-span">26.08-29.11.2019</span>
-              </p> -->
               <div class="relevant__content">
                 <p class="relevant__info-title">ВИСТАВКА</p>
                 <p class="relevant__info-dates">26.08-29.11.2019</p>
@@ -346,7 +343,7 @@
                         </li>
                         <li class="contacts__item-contact">
                           <a
-                            href="tel:+38(044)2781357"
+                            href="tel:+380442781357"
                             class="contact__phone"
                           >
                             тел. +38 (044) 278-13-57
@@ -354,7 +351,7 @@
                         </li>
                         <li class="contacts__item-contact">
                           <a
-                            href="tel:+38(044)2787454"
+                            href="tel:+380442787454"
                             class="contact__phone"
                           >
                             факс +38 (044) 278-74-54
