--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,336 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk-UA" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Національний художній музей України</title>
+    <link
+    rel="shortcut icon"
+    href="../src/images/logo/N-fav.svg" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script
+    type="text/javascript"
+    src="scripts/main.js"
+    defer>
+    </script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header top-bar">
+      <div class="container">
+        <a href="#menu" class="icon icon--burger-menu"></a>
+      </div>
+    </header>
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__background" >
+      </div>
+      <div class="menu__content container top-bar">
+        <a href="#" class="icon icon--close menu__close"></a>
+        <nav class="nav">
+          <ul class="nav__list menu__nav-list">
+            <li class="nav__item menu__nav-item">
+              <a class="nav__link menu__nav-link" href="#gallery">Галерея</a>
+            </li>
+            <li class="nav__item menu__nav-item">
+              <a class="nav__link menu__nav-link" href="#subscription">Про Нас</a>
+            </li>
+            <li class="nav__item menu__nav-item">
+              <a class="nav__link menu__nav-link" href="#actual">Виставки та події</a>
+            </li>
+            <li class="nav__item menu__nav-item">
+              <a class="nav__link menu__nav-link" href="#contacts"> Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="menu__divided-line"></div>
+        <div class="menu__shedule-box">
+          <div class="shedule menu__shedule">
+            <div class="shedule__title">Графік роботи </div>
+            <span class="shedule__bold">12:00 — 20:00</span>
+          середа<br>
+            <span class="shedule__bold">12:00 — 20:00</span> четвер<br>
+            <span class="shedule__bold">12:00 — 20:00</span> п’ятниця<br>
+            <span class="shedule__bold">11:00 — 19:00</span> субота<br>
+            <span class="shedule__bold">11:00 — 19:00</span> неділя<br>
+          </div>
+          <div class="shedule menu__shedule menu__shedule--insight">
+            <span class="shedule__bold">Вихідні:</span> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+        </div>
+        <div class="shedule menu__shedule menu__shedule--outsight">
+          <span class="shedule__bold">Вихідні:</span> понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+      </div>
+
+    </aside>
+    <main class="main-block">
+      </div>
+      <section class="museum" id="museum">
+        <picture class="museum__picture">
+          <source srcset="../src/images/museum.jpg" media="(min-width: 1280px)">
+          <source srcset="../src/images/museum-tablet.jpg" media="(min-width: 640px)">
+          <img
+            src="../src/images/museum-mobile.png"
+            alt="picture of museum"
+            class="museum__image">
+        </picture>
+
+        <article class="museum__content container">
+          <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="museum__ticket-box">
+            <div class="museum__tickets">КВИТКИ</div>
+            <a href="#actual" class="button button--accent-first"></a>
+          </div>
+        </article>
+        <article class="museum__namu-container container">
+          <div class="namu namu--30 museum__namu">NA<br>MU</div>
+        </article>
+
+        <article class="museum__events-box">
+          <div class="museum__line"></div>
+          <div class="museum__events">ПОДІЇ</div>
+        </article>
+      </section>
+
+      <section class="actual container" id="actual">
+        <h2 class="actual__title">Актуальні події</h2>
+        <article class="exhibition">
+          <picture class="exhibition__picture">
+            <source srcset="../src/images/exhibition1.jpeg" media="(min-width: 640px)">
+            <img
+              src="../src/images/exhibition1-mobile.png"
+              alt="picture of nature"
+              class="exhibition__image">
+          </picture>
+          <div class="exhibition__time-box">
+            <div class="exhibition__data-box">
+              <div class="exhibition__item">ВИСТАВКА</div>
+              <div class="exhibition__data">26.08-29.11.2019</div>
+            </div>
+            <div class="exhibition__name">
+              <h3>Йду і повертаюсь</h3>
+              <span class="icon icon--orange-square exhibition__icon exhibition__icon--1"></span>
+            </div>
+            <p class="exhibition__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </article>
+        <article class="exhibition">
+          <picture class="exhibition__picture">
+            <source srcset="../src/images/exhibition2.jpeg" media="(min-width: 640px)">
+            <img
+              src="../src/images/exhibition2-mobile.png" alt="picture of girl and bird"
+              class="exhibition__image">
+          </picture>
+          <div class="exhibition__time-box">
+            <div class="exhibition__data-box">
+              <div class="exhibition__item">ВИСТАВКА</div>
+              <div class="exhibition__data">26.08-29.11.2019</div>
+            </div>
+            <div class="exhibition__name">
+              <h3>І спогади і мрії</h3>
+              <span class="icon icon--orange-square exhibition__icon exhibition__icon--2"></span>
+            </div>
+            <p class="exhibition__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </article>
+      </section>
+
+      <section class="lecture">
+        <picture class="lecture__picture">
+          <source srcset="../src/images/lecture-tablet.jpg" media="(min-width: 640px)">
+          <source srcset="../src/images/lecture.jpg" media="(min-width: 1280px)">
+          <img
+            src="../src/images/lecture-mobile.png"
+            alt="img"
+            class="lecture__image">
+          <div class="lecture__content">
+            <div class="lecture__date-box">
+              <div class="lecture__name">ЛЕКЦІЯ</div>
+              <div class="lecture__date">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </picture>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <h2 class="gallery__title container">Галерея</h2>
+        <div class="slider">
+          <div class="slider__slides">
+            <div id="slide-1">
+              <img
+            src="../src/images/carusel1.jpeg"
+            alt="picture of F. Krychevskyi - The bride"
+            class="slider__image">
+            </div>
+            <div id="slide-2">
+              <img
+                src="../src/images/carusel2.jpeg"
+                alt="picture of Kyriac Kostandi  - Geese"
+                class="slider__image">
+            </div>
+            <div id="slide-3">
+              <img
+            src="../src/images/carusel4.jpeg"
+            alt="picture of Cyriac Kostandi - Sunny day."
+            class="slider__image">
+            </div>
+            <div id="slide-4">
+              <img
+            src="../src/images/carusel5.jpg"
+            alt="picture of Mykola Hlushchenko - At sea"
+            class="slider__image">
+            </div>
+          </div>
+          <div class="slider__radio-box">
+
+            <label for="#radio1" class="slider__label">
+              <input
+                type="radio"
+                name="radio"
+                id="radio1"
+                class="slider__radio slider__radio--1"
+                checked>
+            </label>
+
+            <label for="#radio2" class="slider__label">
+              <input
+                type="radio"
+                name="radio"
+                id="radio2"
+                class="slider__radio slider__radio--2">
+            </label>
+
+            <label for="#radio3" class="slider__label">
+              <input
+                type="radio"
+                name="radio"
+                id="radio3"
+                class="slider__radio slider__radio--3">
+            </label>
+
+            <label for="#radio4" class="slider__label">
+              <input
+                type="radio"
+                name="radio"
+                id="radio4"
+                class="slider__radio slider__radio--4">
+            </label>
+          </div>
+
+        </div>
+        <div class="gallery__desktop-box container">
+          <img
+            src="../src/images/carusel1.jpeg"
+            alt="picture of F. Krychevskyi - The bride"
+            class="gallery__image gallery__image--1">
+          <img
+            src="../src/images/carusel3.jpeg"
+            alt="picture of Petro Levchenko - Wilderness"
+            class="gallery__image gallery__image--2">
+          <img
+            src="../src/images/carusel4.jpeg"
+            alt="picture of Cyriac Kostandi - Sunny day."
+            class="gallery__image gallery__image--3">
+          <img
+            src="../src/images/carusel5.jpg"
+            alt="picture of Mykola Hlushchenko - At sea"
+            class="gallery__image gallery__image--4">
+
+        </div>
+        <div class="slider"></div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+        <div class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+        <form
+          id="form"
+          action="https://example.com"
+          method="post"
+          name="contact-form"
+          onsubmit="this.reset(); return false;"
+          class="subscription__form">
+          <input
+            type="email"
+            name="email"
+            autocomplete="email"
+            placeholder="E-mail"
+            id="user-email"
+            class="subscription__email"
+            required
+            multiple>
+          <button
+            type="submit"
+            class="button button--accent-second subscription__input"></button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer container">
+      <div class="namu namu--36 footer__namu">NA<br>MU</div>
+      <div class="footer__social-media">
+        <a
+          href="https://www.facebook.com/namu.museum/"
+          class="icon icon--facebook"
+          target="_blank"></a>
+        <a
+          href="https://www.instagram.com/namu.museum/"
+          class="icon icon--insta"
+          target="_blank"></a>
+      </div>
+
+      <div class="footer__shedule" id="contacts">
+
+        <div class="shedule">
+          <div class="shedule__title">Графік роботи </div>
+          <span class="shedule__bold">12:00 — 20:00</span>
+        середа<br>
+          <span class="shedule__bold">12:00 — 20:00</span> четвер<br>
+          <span class="shedule__bold">12:00 — 20:00</span> п’ятниця<br>
+          <span class="shedule__bold">11:00 — 19:00</span> субота<br>
+          <span class="shedule__bold">11:00 — 19:00</span> неділя<br>
+          <br>
+          Вихідні понеділок, вівторок<br>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <div class="shedule">
+          <div class="shedule__title">Контакти:</div>
+          вул. М. Грушевського, 6; Київ, 01001<br>
+          тел. +38 (044) 278-13-57<br>
+          факс +38 (044) 278-74-54<br>
+          e-mail: info@namu.kiev.ua
+        </div>
+      </div>
+
+      <a href="#" class="footer__button-home icon icon--home"></a>
+      <div class="footer__dividing-line"></div>
+
+      <nav class="nav footer__nav">
+        <ul class="nav__list footer__nav-list">
+          <li class="nav__item footer__nav-item">
+            <a class="nav__link" href="#gallery">Галерея</a>
+          </li>
+          <li class="nav__item footer__nav-item">
+            <a class="nav__link" href="#subscription">Про Нас</a>
+          </li>
+          <li class="nav__item footer__nav-item">
+            <a class="nav__link" href="#actual">Виставки та події</a>
+          </li>
+          <li class="nav__item footer__nav-item">
+            <a class="nav__link" href="#contacts"> Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__watermarks-block">
+        <div class="footer__watermark">Designed by Zhyriada Marina</div>
+        <div class="footer__watermark">Copyright © 2019. All Rights Reserved.</div>
+      </div>
+    </footer>
   </body>
 </html>
