add first solution

--- a/src/index.html
+++ b/src/index.html
@@ -52,14 +52,14 @@
             </h1>
 
             <div class="bottom__buy-btn buy-btn">
-              <p class="buy-btn__text">КВИТКИ</p>
+              <a href="#current-events" class="buy-btn__text">КВИТКИ</a>
               <div class="buy-btn__buy-rectangle">
                 <a href="https://savelife.in.ua/DONATE/" class="buy-btn__icon icon icon--arrow"></a>
               </div>
             </div>
 
             <div class="bottom__vertical-container">
-              <p class="bottom__vertical">ПОДІЇ</p>
+              <a href="#current-events"class="bottom__vertical">ПОДІЇ</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
                   </li>
 
                   <li class="nav__item">
-                    <a class="nav__link" href="#top">Про Нас</a>
+                    <a class="nav__link" href="#subscription">Про Нас</a>
                   </li>
 
                   <li class="nav__item">
@@ -101,34 +101,36 @@
 
             <div class="menu__schedule schedule">
               <h4 class="schedule__title">Графік роботи</h4>
-              <ul class="schedule__list">
-                <li class="schedule__item">
-                  <span class="schedule__weight">12:00 — 20:00</span> середа
-                </li>
+              <div class="schedule__content">
+                <ul class="schedule__list">
+                  <li class="schedule__item">
+                    <span class="schedule__weight">12:00 — 20:00</span> середа
+                  </li>
 
-                <li class="schedule__item">
-                  <span class="schedule__weight">12:00 — 20:00</span> четвер
-                </li>
+                  <li class="schedule__item">
+                    <span class="schedule__weight">12:00 — 20:00</span> четвер
+                  </li>
 
-                <li class="schedule__item">
-                  <span class="schedule__weight">12:00 — 20:00</span> п’ятниця
-                </li>
+                  <li class="schedule__item">
+                    <span class="schedule__weight">12:00 — 20:00</span> п’ятниця
+                  </li>
 
-                <li class="schedule__item">
-                  <span class="schedule__weight">11:00 — 19:00</span> субота
-                </li>
+                  <li class="schedule__item">
+                    <span class="schedule__weight">11:00 — 19:00</span> субота
+                  </li>
 
-                <li class="schedule__item">
-                  <span class="schedule__weight">11:00 — 19:00</span> неділя
-                </li>
-              </ul>
+                  <li class="schedule__item">
+                    <span class="schedule__weight">11:00 — 19:00</span> неділя
+                  </li>
+                </ul>
 
-              <p class="schedule__free-days">
-                <span class="schedule__weight">Вихідні:</span> понеділок, вівторок
-                <br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
+                <p class="schedule__free-days">
+                  <span class="schedule__weight">Вихідні:</span> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -229,7 +231,7 @@
           </h2>
 
           <div class="gallery__pictures">
-            <div id="slideshow-wrap" class="gallery__slideshow slideshow">
+            <div class="gallery__slideshow slideshow">
 
               <input
                 type="radio"
@@ -268,43 +270,43 @@
 
               <div id="slideshow-inner" class="slideshow__inner">
                 <ul class="slideshow__list">
-                  <li id="slide1" class="slideshow__slide slideshow__slide--1">
+                  <li class="slideshow__slide slide slide--1">
                     <img
                       src="./images/gellery/gellery-img-1.png"
                       alt="Наречена. Федір Кричевський"
-                      class="slideshow__picture slideshow__picture--1 picture picture--1"
+                      class="slideshow__picture"
                     >
                   </li>
 
-                  <li id="slide2" class="slideshow__slide slideshow__slide--2">
+                  <li class="slideshow__slide slide slide--2">
                     <img
                       src="./images/gellery/gellery-img-2.png"
                       alt="Гуси. Кіріак Костанді"
-                      class="slideshow__picture slideshow__picture--2 picture picture--2"
+                      class="slideshow__picture"
                     >
                   </li>
 
-                  <li id="slide3" class="slideshow__slide slideshow__slide--3">
+                  <li class="slideshow__slide slide slide--3">
                     <img
                       src="./images/gellery/gellery-img-3.png"
                       alt="Глухомань. Село взимку. Петро Левченко"
-                      class="slideshow__picture slideshow__picture--3 picture picture--3"
+                      class="slideshow__picture"
                     >
                   </li>
 
-                  <li id="slide4" class="slideshow__slide slideshow__slide--4">
+                  <li class="slideshow__slide slide slide--4">
                     <img
                       src="./images/gellery/gellery-img-4.png"
                       alt="Невідома картина в стилі імпресіонізму. Можна було б назвати - Літній день у парку"
-                      class="slideshow__picture slideshow__picture--4 picture picture--4"
+                      class="slideshow__picture"
                     >
                   </li>
 
-                  <li id="slide5" class="slideshow__slide slideshow__slide--5">
+                  <li class="slideshow__slide slide slide--5">
                     <img
                       src="./images/gellery/gellery-img-5.png"
                       alt="На море. Микола Глущенко"
-                      class="slideshow__picture slideshow__picture--5 picture picture--5"
+                      class="slideshow__picture"
                     >
                   </li>
                 </ul>
@@ -314,13 +316,17 @@
         </div>
       </section>
 
-      <section class="main__subscription subscription">
+      <section class="main__subscription subscription" id="subscription">
         <div class="container">
           <h2 class="subscription__title">Підписка</h2>
 
           <p class="subscription__advice">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-          <div class="subscription__input-container">
+          <form
+            class="subscription__input-container"
+            action="get"
+            onsubmit= "this.reset(); return false;"
+          >
             <input
               class="subscription__input"
               type="email"
@@ -328,9 +334,15 @@
             >
 
             <div class="subscription__rectangle">
-              <a href="#" class="subscription__icon icon icon--arrow-black"></a>
+              <button
+                required
+                name="submit"
+                value="submitted_value"
+                class="subscription__icon icon icon--arrow-black"
+              >
+              </button>
             </div>
-          </div>
+          </form>
         </div>
 
       </section>
@@ -348,9 +360,19 @@
               </a>
 
               <div class="CTA__icons">
-                <a href="#https://www.facebook.com/namu.museum/? locale=uk_UA" class="CTA__icon icon icon--facebook"></a>
+                <a
+                  href="https://www.facebook.com/namu.museum/? locale=uk_UA"
+                  class="CTA__icon icon icon--facebook"
+                  target="_blank"
+                >
+                </a>
 
-                <a href="#https://www.instagram.com/namu.museum/" class="CTA__icon icon icon--instagram"></a>
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="CTA__icon icon icon--instagram"
+                  target="_blank"
+                >
+                </a>
               </div>
             </div>
 
@@ -387,23 +409,34 @@
                 </p>
               </div>
 
-              <div class="CTA__contacts contacts">
+              <div class="CTA__contacts contacts contacts--black">
                 <h4 class="contacts__title">Контакти:</h4>
                 <ul class="contacts__list">
                   <li class="contacts__item">
-                    вул. М. Грушевського, 6; Київ, 01001
+                    <a
+                      class="contacts__link"
+                      target="_blank"
+                      href="https://goo.gl/maps/B6CkuFdGwvpcJqSW7"
+                  >вул. М. Грушевського, 6; Київ, 01001
+                    </a>
                   </li>
 
                   <li class="contacts__item">
-                    тел. +38 (044) 278-13-57
+                    <a href="tel:+1 212-923-3700" class="contacts__link">
+                      тел. +38 (044) 278-13-57
+                    </a>
                   </li>
 
                   <li class="contacts__item">
-                    факс +38 (044) 278-74-54
+                    <a href="tel:+1 212-923-3700" class="contacts__link">
+                      факс +38 (044) 278-74-54
+                    </a>
                   </li>
 
                   <li class="contacts__item">
-                    e-mail: info@namu.kiev.ua
+                    <a href="mailto: info@namu.kiev.ua" class="contacts__link">
+                      e-mail: info@namu.kiev.ua
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -412,7 +445,7 @@
 
 
           <div class="CTA__go-top">
-            <a href="#https://www.facebook.com/namu.museum/?  locale=uk_UA" class="go-top__icon icon icon--arrow-up"></a>
+            <a href="#top" class="go-top__icon icon icon--arrow-up"></a>
           </div>
 
           <div class="CTA__bottom">
@@ -425,7 +458,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a class="nav__link nav__link--black" href="#top">Про Нас</a>
+                  <a class="nav__link nav__link--black" href="#subscription">Про Нас</a>
                 </li>
 
                 <li class="nav__item">
