--- a/src/index.html
+++ b/src/index.html
@@ -309,6 +309,7 @@
                 <div
                   class="
                   gallery__slide-container
+                  gallery__item--display
                   grid__item
                   grid__item--1-2
                   grid__item--tablet-4-6"
@@ -325,6 +326,7 @@
                 <div 
                   class="
                   gallery__slide-container
+                  gallery__item--display
                   grid__item
                   grid__item--1-2
                   grid__item--tablet-1-3"
@@ -339,6 +341,7 @@
                 <div 
                   class="
                   gallery__slide-container
+                  gallery__item--display
                   grid__item
                   grid__item--1-2
                   grid__item--tablet-4-6"
