Add dropping menu

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;600;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
@@ -55,5 +55,68 @@
         </div>
       </div>
     </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="menu__header-link">
+            <img
+              src="images/icons/icon-close.svg"
+              alt="Close icon"
+              class="menu__header-icon"
+            >
+          </a>
+
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#about-us" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#current-events" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <hr class="menu__divider">
+
+          <div class="schedule menu__schedule">
+            <div class="schedule__title">Графік роботи</div>
+
+            <div class="schedule__content">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule--text--bold">12:00 — 20:00</span> середа
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule--text--bold">12:00 — 20:00</span> четвер
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule--text--bold">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule--text--bold">11:00 — 19:00</span> субота
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule--text--bold">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+
+              <p class="schedule__info">
+                <span class="schedule--text--bold">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__transparency"></div>
+    </aside>
   </body>
 </html>
