--- a/src/index.html
+++ b/src/index.html
@@ -15,54 +15,53 @@
     </script>
   </head>
   <body class="page__body">
-    <header class="header top-bar">
-      <div class="container">
-        <a href="#menu" class="icon icon--burger-menu"></a>
-      </div>
+    <header class="header top-bar container">
+      <a href="#menu" class="icon icon--burger-menu"></a>
     </header>
     <aside class="menu page__menu" id="menu">
       <div class="menu__background" >
       </div>
-      <div class="menu__content container top-bar">
-        <a href="#" class="icon icon--close menu__close"></a>
-        <nav class="nav">
-          <ul class="nav__list menu__nav-list">
-            <li class="nav__item menu__nav-item">
-              <a class="nav__link menu__nav-link" href="#gallery">Галерея</a>
-            </li>
-            <li class="nav__item menu__nav-item">
-              <a class="nav__link menu__nav-link" href="#subscription">Про Нас</a>
-            </li>
-            <li class="nav__item menu__nav-item">
-              <a class="nav__link menu__nav-link" href="#actual">Виставки та події</a>
-            </li>
-            <li class="nav__item menu__nav-item">
-              <a class="nav__link menu__nav-link" href="#contacts"> Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="menu__divided-line"></div>
-        <div class="menu__shedule-box">
-          <div class="shedule menu__shedule">
-            <div class="shedule__title">Графік роботи </div>
-            <span class="shedule__bold">12:00 — 20:00</span>
-          середа<br>
-            <span class="shedule__bold">12:00 — 20:00</span> четвер<br>
-            <span class="shedule__bold">12:00 — 20:00</span> п’ятниця<br>
-            <span class="shedule__bold">11:00 — 19:00</span> субота<br>
-            <span class="shedule__bold">11:00 — 19:00</span> неділя<br>
+      <div class="menu__top">
+        <div class="menu__content container top-bar">
+          <a href="#" class="icon icon--close menu__close"></a>
+          <nav class="nav">
+            <ul class="nav__list menu__nav-list">
+              <li class="nav__item menu__nav-item">
+                <a class="nav__link menu__nav-link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item menu__nav-item">
+                <a class="nav__link menu__nav-link" href="#subscription">Про Нас</a>
+              </li>
+              <li class="nav__item menu__nav-item">
+                <a class="nav__link menu__nav-link" href="#actual">Виставки та події</a>
+              </li>
+              <li class="nav__item menu__nav-item">
+                <a class="nav__link menu__nav-link" href="#contacts"> Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu__divided-line"></div>
+          <div class="menu__shedule-box">
+            <div class="shedule menu__shedule">
+              <div class="shedule__title">Графік роботи </div>
+              <span class="shedule__bold">12:00 — 20:00</span>
+            середа<br>
+              <span class="shedule__bold">12:00 — 20:00</span> четвер<br>
+              <span class="shedule__bold">12:00 — 20:00</span> п’ятниця<br>
+              <span class="shedule__bold">11:00 — 19:00</span> субота<br>
+              <span class="shedule__bold">11:00 — 19:00</span> неділя<br>
+            </div>
+            <div class="shedule menu__shedule menu__shedule--insight">
+              <span class="shedule__bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
           </div>
-          <div class="shedule menu__shedule menu__shedule--insight">
+          <div class="shedule menu__shedule menu__shedule--outsight">
             <span class="shedule__bold">Вихідні:</span> понеділок, вівторок<br>
             Каса припиняє роботу за 1 годину до закриття музею
           </div>
         </div>
-        <div class="shedule menu__shedule menu__shedule--outsight">
-          <span class="shedule__bold">Вихідні:</span> понеділок, вівторок<br>
-          Каса припиняє роботу за 1 годину до закриття музею
-        </div>
       </div>
-
     </aside>
     <main class="main-block">
       </div>
@@ -83,14 +82,13 @@
             <div class="museum__tickets">КВИТКИ</div>
             <a href="#actual" class="button button--accent-first"></a>
           </div>
+          <article class="museum__events-box">
+            <div class="museum__line"></div>
+            <div class="museum__events">ПОДІЇ</div>
+          </article>
         </article>
         <article class="museum__namu-container container">
           <div class="namu namu--30 museum__namu">NA<br>MU</div>
-        </article>
-
-        <article class="museum__events-box">
-          <div class="museum__line"></div>
-          <div class="museum__events">ПОДІЇ</div>
         </article>
       </section>
 
@@ -301,10 +299,34 @@
       <div class="footer__contacts">
         <div class="shedule">
           <div class="shedule__title">Контакти:</div>
-          вул. М. Грушевського, 6; Київ, 01001<br>
+          <a
+            href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+            target="_blank"
+            class="footer__link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a
+            href="tel:+380442781357"
+            target="_blank"
+            class="footer__link"
+          >
           тел. +38 (044) 278-13-57<br>
+          </a>
+          <a
+            href="tel:+380442787454"
+            target="_blank"
+            class="footer__link"
+          >
           факс +38 (044) 278-74-54<br>
-          e-mail: info@namu.kiev.ua
+          </a>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            target="_blank"
+            class="footer__link"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
         </div>
       </div>
 
