1.fix label elements

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
           </div>
           <div class="slider__radio-box">
 
-            <label for="#radio1" class="slider__label">
+            <label for="radio1" class="slider__label">
               <input
                 type="radio"
                 name="radio"
@@ -193,7 +193,7 @@
                 checked>
             </label>
 
-            <label for="#radio2" class="slider__label">
+            <label for="radio2" class="slider__label">
               <input
                 type="radio"
                 name="radio"
@@ -201,7 +201,7 @@
                 class="slider__radio slider__radio--2">
             </label>
 
-            <label for="#radio3" class="slider__label">
+            <label for="radio3" class="slider__label">
               <input
                 type="radio"
                 name="radio"
@@ -209,7 +209,7 @@
                 class="slider__radio slider__radio--3">
             </label>
 
-            <label for="#radio4" class="slider__label">
+            <label for="radio4" class="slider__label">
               <input
                 type="radio"
                 name="radio"
