add second solution

--- a/src/index.html
+++ b/src/index.html
@@ -211,14 +211,12 @@
           >
 
           <div class="container">
-            <div class="event__exposition">
-              <div class="event__on-img-container">
-                <div class="event__date-container event__date-container--on-img">
-                  <p class="event__kind-of-event">ЛЕКЦІЯ</p>
-                  <p class="event__date">26/08/2019 - 11:00</p>
-                </div>
-                <h3 class="event__subtitle event__subtitle--position">Від класицизму до романтизму</h3>
+            <div class="event__exposition event__exposition--position">
+              <div class="event__date-container event__date-container--on-img">
+                <p class="event__kind-of-event">ЛЕКЦІЯ</p>
+                <p class="event__date">26/08/2019 - 11:00</p>
               </div>
+              <h3 class="event__subtitle event__subtitle--position">Від класицизму до романтизму</h3>
             </div>
           </div>
         </article>
@@ -444,8 +442,10 @@
           </div>
 
 
-          <div class="CTA__go-top">
-            <a href="#top" class="go-top__icon icon icon--arrow-up"></a>
+          <div class="CTA__go-top-container">
+            <div class="CTA__go-top">
+              <a href="#top" class="go-top__icon icon icon--arrow-up"></a>
+            </div>
           </div>
 
           <div class="CTA__bottom">
