--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,356 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/NAMU-logo.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body" id="home">
+    <header class="header page__section">
+      <div class="header__background"></div>
+      <div class="container">
+        <div class="header__content">
+          <div class="header__grid grid">
+            <div class="header__left grid__item--mobile-1-2 grid__item--tablet-1-3 grid__item--desktop-1-5">
+              <a
+                href="#menu"
+                class="icon icon--menu" aria-label="Перейти до меню"
+              ></a>
+              <h1 class="header__title">
+                ХУДОЖНІЙ МУЗЕЙ
+              </h1>
+              <div class="header__flex">
+                <div class="header__vertical-container">
+                  <div class="header__vertical">
+                    ПОДІЇ
+                  </div>
+                </div>
+                <button class="header__button button">
+                  <div class="header__button-word">
+                    КВИТКИ
+                  </div>
+                  <div class="header__button-arrow"></div>
+                </button>
+              </div>
+            </div>
+            <div class="header__right grid__item--mobile-1-2 grid__item--tablet-4-6 grid__item--desktop-6-12">
+              <img
+                src="/images/NAMU-logo.svg"
+                alt="NAMU logo"
+                class="header__logo"
+              >
+            </div>
+          </div>
+
+          <nav class="header__nav nav" id="menu">
+            <div class="container">
+              <div class="header__content header__nav-flex">
+                <a href="#" class="icon icon--cross"></a>
+
+                <ul class="nav__list ul">
+                  <div class="nav__list-flex">
+                    <li class="nav__item">
+                      <a href="#gallery" class="nav__link">Галерея</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#events" class="nav__link">Виставки та <br> події</a>
+                    </li>
+                  </div>
+                  <div class="nav__list-flex">
+                    <li class="nav__item">
+                      <a href="#about-us" class="nav__link">Про Нас</a>
+                    </li>
+                    <li class="nav__item">
+                      <a href="#contacts" class="nav__link">Контакти</a>
+                    </li>
+                  </div>
+
+                </ul>
+
+                <div class="nav__line"></div>
+
+                <div class="nav__schedule schedule">
+                  <h3 class="schedule__title">
+                    Графік роботи
+                  </h3>
+
+                  <div class="schedule__flex schedule__flex--header">
+                    <ul class="schedule__list">
+                      <li class="schedule__work-day">
+                        <time>12:00 — 20:00</time> середа
+                      </li>
+                      <li class="schedule__work-day">
+                        <time>12:00 — 20:00</time> четвер
+                      </li>
+                      <li class="schedule__work-day">
+                        <time>12:00 — 20:00</time> п'ятниця
+                      </li>
+                      <li class="schedule__work-day">
+                        <time>11:00 — 19:00</time> субота
+                      </li>
+                      <li class="schedule__work-day">
+                        <time>11:00 — 19:00</time> неділя
+                      </li>
+                    </ul>
+                    <p class="schedule__work-day-text">
+                      <strong>Вихідні</strong>: понеділок, вівторок<br>
+                      Каса припиняє роботу за 1 годину
+                      до закриття музею
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <div class="page__section page__section--events events" id="events">
+        <div class="container">
+          <div class="events__event event--1">
+            <div class="grid">
+              <h2 class="grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2 page__title">
+                Актуальні події
+              </h2>
+              <img
+                src="/images/photos/01.jpg"
+                alt="Йду і повертаюсь"
+                class="grid__item--desktop-1-7 grid__item--tablet-1-6 grid__item--mobile-1-2 events__image"
+              >
+              <div class="grid__item--desktop-9-12 grid__item--tablet-1-4 grid__item--mobile-1-2 events__description">
+                <div class="events__description-flex">
+                  <p class="events__type">ВИСТАВКА</p>
+                  <p class="events__dates">26.08-29.11.2019</p>
+                </div>
+                <h3 class="events__name">
+                  Йду і повертаюсь
+                </h3>
+                <p class="events__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="events__event event--2">
+            <div class="grid">
+              <img
+                src="/images/photos/02.jpg"
+                alt="І спогади і мрії"
+                class="grid__item--desktop-1-7 grid__item--tablet-1-6 grid__item--mobile-1-2 events__image"
+              >
+              <div class="grid__item--desktop-9-12 grid__item--tablet-1-4 grid__item--mobile-1-2 events__description">
+                <div class="events__description-flex">
+                  <p class="events__type">ВИСТАВКА</p>
+                  <p class="events__dates">26.08-29.11.2019</p>
+                </div>
+                <h3 class="events__name">
+                  І спогади і мрії
+                </h3>
+                <p class="events__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__big event--3">
+          <img
+            src="/images/photos/03.jpg"
+            alt="Від класицизму до романтизму"
+            class="events__image--big"
+          >
+          <div class="container">
+            <div class="events__big-block-container grid">
+              <div class="events__big-block grid__item--desktop-4-9 grid__item--tablet-1-4 grid__item--mobile-1-2">
+                <div class="events__description-flex events__description-flex--big">
+                  <p class="events__type">ЛЕКЦІЯ</p>
+                  <p class="events__dates">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="events__name--big">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section gallery" id="gallery">
+        <div class="container">
+          <div class="grid grid--gallery">
+            <h2 class="grid__item--desktop-1-5 grid__item--tablet-1-4 grid__item--mobile-1-2 page__title">
+              Галерея
+            </h2>
+            <img
+              src="/images/photos/04.jpg"
+              alt="Перше фото в галереї"
+              class="gallery__image grid__item--desktop-1-3 grid__item--tablet-1-3 grid__item--mobile-1-2"
+            >
+            <img
+              src="/images/photos/05.jpg"
+              alt="Друге фото в галереї"
+              class="gallery__image grid__item--desktop-5-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
+            >
+            <img
+              src="/images/photos/06.jpg"
+              alt="Третє фото в галереї"
+              class="gallery__image grid__item--desktop-1-8 grid__item--tablet-1-3 grid__item--mobile-1-2"
+            >
+            <img
+              src="/images/photos/07.jpg"
+              alt="Четверте фото в галереї"
+              class="gallery__image grid__item--desktop-9-12 grid__item--tablet-4-6 grid__item--mobile-1-2"
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section page__section--contacts contacts" id="contacts">
+        <div class="container">
+          <div class="grid">
+            <div class="contacts__block grid__item--desktop-4-9">
+              <h2 class="page__title page__title--contacts">
+                Підписка
+              </h2>
+              <p class="contacts__text">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+              <div class="contacts__flex">
+                <form
+                  action="/"
+                  method="post"
+                  class="contacts__form"
+                >
+                  <input
+                    name="E-mail"
+                    type="email"
+                    class="contacts__form-field"
+                    placeholder="E-mail"
+                    required
+                  >
+                </form>
+                <div class="header__button-arrow header__button-arrow--contacts"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer page__section page__section--footer">
+        <div class="container">
+          <div class="footer__nav grid">
+            <div class="footer__icons grid__item--desktop-1-1">
+              <a href="#" class="footer__link">
+                <img
+                  src="/images/NAMU-logo.svg"
+                  alt="NAMU logo"
+                  class="footer__logo"
+                >
+              </a>
+              <div class="footer__icon-flex">
+                <a
+                  href="#facebook"
+                  class="footer__icon icon icon--facebook"
+                  aria-label="Перейти до Facebook сторінки"
+                  target="_blank"
+                ></a>
+                <a
+                  href="#instagram"
+                  class="footer__icon icon icon--instagram"
+                  aria-label="Перейти до Instagram сторінки"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+
+            <div class="nav__schedule schedule grid__item--desktop-3-4">
+              <h3 class="schedule__title schedule__title--footer">
+                Графік роботи
+              </h3>
+
+              <div class="schedule__flex schedule__flex--footer">
+                <ul class="schedule__list">
+                  <li class="schedule__work-day schedule__work-day--footer">
+                    <time>12:00 — 20:00</time> середа
+                  </li>
+                  <li class="schedule__work-day schedule__work-day--footer">
+                    <time>12:00 — 20:00</time> четвер
+                  </li>
+                  <li class="schedule__work-day schedule__work-day--footer">
+                    <time>12:00 — 20:00</time> п'ятниця
+                  </li>
+                  <li class="schedule__work-day schedule__work-day--footer">
+                    <time>11:00 — 19:00</time> субота
+                  </li>
+                  <li class="schedule__work-day schedule__work-day--footer">
+                    <time>11:00 — 19:00</time> неділя
+                  </li>
+                </ul>
+                <p class="schedule__work-day-text schedule__work-day-text--footer">
+                  <strong>Вихідні</strong>: понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__contacts grid__item--desktop-5-6">
+              <h3 class="schedule__title schedule__title--footer">
+                Контакти
+              </h3>
+
+              <p class="schedule__work-day-text schedule__work-day-text--footer">
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54 <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+
+            <div class="grid__item--desktop-7-7">
+              <div class="footer__line"></div>
+            </div>
+
+            <div class="nav__list nav__list--footer grid__item--desktop-8-9">
+              <li class="nav__item nav__item--footer">
+                <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+              </li>
+            </div>
+            <div class="nav__list nav__list--footer grid__item--desktop-10-11">
+              <li class="nav__item nav__item--footer">
+                <a href="#about-us" class="nav__link nav__link--footer">Про Нас</a>
+              </li>
+              <li class="nav__item nav__item--footer">
+                <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+              </li>
+            </div>
+          </div>
+
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+            <p class="footer__copyright-text">
+              Designed by Zhyriada Marina
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
