--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Museum</title>
-    <link rel="icon" href="./images/icons/logo.svg" type="image/x-icon" >
+    <link
+      rel="icon"
+      href="./images/icons/logo.svg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss" >
   </head>
   <body id="menu">
     <a href="#menu" class="header-burger">
-      <img class="header__burger" src="./images/icons/burger.svg" alt="menu" >
+      <img
+        class="header__burger"
+        src="./images/icons/burger.svg"
+        alt="menu"
+      >
     </a>
     <a href="#">
       <div class="menu-wrapper"></div>
@@ -74,7 +82,11 @@
         <h2 class="events__title">Актуальні події</h2>
         <div class="events__container">
           <article class="event">
-            <img src="./images/events/1.png" alt="1" class="event__image">
+            <img
+              class="event__image"
+              src="./images/events/1.png"
+              alt="1"
+            >
             <div class="event__container-wrapper">
               <div class="event__container">
                 <p class="event__container-title">ВИСТАВКА</p>
@@ -93,7 +105,11 @@
             </div>
           </article>
           <article class="event">
-            <img src="./images/events/2.png" alt="2" class="event__image" >
+            <img
+              class="event__image"
+              src="./images/events/2.png"
+              alt="2"
+            >
             <div class="event__container-wrapper event__container-wrapper--2">
               <div class="event__container">
                 <p class="event__container-title">ВИСТАВКА</p>
