add third solution: fix header position, btns, x overflow

--- a/src/index.html
+++ b/src/index.html
@@ -51,12 +51,15 @@
               МУЗЕЙ
             </h1>
 
-            <div class="bottom__buy-btn buy-btn">
-              <a href="#current-events" class="buy-btn__text">КВИТКИ</a>
+            <a class="bottom__buy-btn buy-btn" href="#current-events">
+              <p class="buy-btn__text">КВИТКИ</p>
+
               <div class="buy-btn__buy-rectangle">
-                <a href="https://savelife.in.ua/DONATE/" class="buy-btn__icon icon icon--arrow"></a>
+
+                <div class="buy-btn__icon icon icon--arrow"></div>
               </div>
-            </div>
+            </a>
+
 
             <div class="bottom__vertical-container">
               <a href="#current-events"class="bottom__vertical">ПОДІЇ</a>
@@ -329,17 +332,16 @@
               class="subscription__input"
               type="email"
               placeholder="Email"
+              required
             >
 
-            <div class="subscription__rectangle">
-              <button
-                required
-                name="submit"
-                value="submitted_value"
-                class="subscription__icon icon icon--arrow-black"
-              >
-              </button>
-            </div>
+            <button
+              name="submit"
+              value="submitted_value"
+              class=" subscription__rectangle"
+            >
+              <div class="subscription__icon icon icon--arrow-black"></div>
+            </button>
           </form>
         </div>
 
