--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           >
         </a>
 
-        <a href="#" class="header__logo">NA MU</a>
+        <a href="#" class="logo logo--header">NA MU</a>
       </nav>
 
       <img
@@ -42,10 +42,10 @@
         <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
 
         <a href="#subscribe" class="header__button button">
-          <span class="button__left">
+          <span class="button__left button__left--header">
             КВИТКИ
           </span>
-          <span class="button__right"></span>
+          <span class="button__right button__right--header"></span>
         </a>
       </div>
 
@@ -181,8 +181,8 @@
             </div>
           </section>
 
-          <section class="actualy__lecture">
-            <!-- <img src="./images/vid-klasicizmu-do-romantizmu.jpg" class="actualy__lecture-image" alt="Від класицизму до романтизму"> -->
+          <!-- <section class="actualy__lecture">
+            <img src="./images/vid-klasicizmu-do-romantizmu.jpg" class="actualy__lecture-image" alt="Від класицизму до романтизму">
 
             <picture>
               <source srcset="./images/vid-klasicizmu-do-romantizmu-1280.jpg" media="(min-width: 1280px)">
@@ -209,21 +209,231 @@
                 Від класицизму до романтизму
               </h3>
             </div>
-          </section>
+          </section> -->
         </div>
+
+        <section class="actualy__lecture">
+          <picture>
+            <source srcset="./images/vid-klasicizmu-do-romantizmu-1280.jpg" media="(min-width: 1280px)">
+            <source srcset="./images/vid-klasicizmu-do-romantizmu-768.jpg" media="(min-width: 768px)">               
+            <img
+              src="./images/vid-klasicizmu-do-romantizmu-320.jpg"
+              class="actualy__lecture-image"
+              alt="Від класицизму до романтизму"
+            >
+          </picture>            
+
+          <div class="actualy__lecture-description">
+            <div class="actualy__event-name-date actualy__event-name-date--lecture">
+              <div class="actualy__event-name actualy__event-name--lecture">
+                ЛЕКЦІЯ
+              </div>
+
+              <div class="actualy__event-date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+
+            <h3 class="actualy__event-title actualy__event-title--lecture">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </section>
       </section>
 
-      <section class="page__gallery" id="gallery">
+      <section class="page__gallery gallery" id="gallery">
+        <!-- <div class="gallery__container"> -->
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
 
+        <div class="gallery__images">
+          <img
+            class="gallery__image"
+            src="./images/galery1.jpg"
+            alt="image 1"
+          >
+
+          <img
+            class="gallery__image"
+            src="./images/galery2.jpg"
+            alt="image 1"
+          >
+
+          <img
+            class="gallery__image"
+            src="./images/galery3.jpg"
+            alt="image 1"
+          >
+
+          <img
+            class="gallery__image"
+            src="./images/galery4.jpg"
+            alt="image 1"
+          >
+
+          <!-- <img
+            class="gallery__image"
+            src="./images/galery5.jpg"
+            alt="image 1"
+          > -->
+        </div>
+
+        <div class="gallery__dots"> 
+          <span class="gallery__dot gallery__dot--selected"></span> 
+          <span class="gallery__dot"></span> 
+          <span class="gallery__dot"></span> 
+          <span class="gallery__dot"></span> 
+        </div>
+        <!-- </div>         -->
       </section>
 
-      <section class="page__subscribe" id="subscribe">
+      <section class="page__subscribe subscribe" id="subscribe">
+        <div class="subscribe__content">
+          <div class="subscribe__title">
+            Підписка
+          </div>
 
+          <div class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <form 
+            action="#" 
+            class="button button--subscribe" 
+            id="form-reload"
+          >
+            <input 
+              type="email"
+              class="button__left button__left--subscribe" 
+              name="email"
+              placeholder="E-mail"
+            >
+            <button type="submit" class="button__right button__right--subscribe"></button>
+          </form>
+        </div>
       </section>
     </main>
 
-    <footer class="page__footer" id="contact">
+    <footer class="page__footer footer" id="contact">
+      <div class="footer__content">
+        <div class="footer__links">
+          <a href="#" class="logo logo--footer">NA MU</a>
 
+          <div class="footer__social">
+            <a 
+              href="https://www.facebook.com/" 
+              class="footer__social-link" 
+              target="_blank"
+            >
+              <img
+                src="./images/icon-facebook.svg"
+                class="footer__social-icon"
+                alt="facebook"
+              >
+            </a>
+
+            <a 
+              href="https://www.instagram.com/" 
+              class="footer__social-link" 
+              target="_blank"
+            >
+              <img
+                src="./images/icon-instagram.svg"
+                class="footer__social-icon"
+                alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+        
+        <div class="footer__schedule">
+          <div class="footer__schedule-title">
+            Графік роботи
+          </div>
+
+          <div class="footer__schedule-box">
+            <ul class="footer__schedule-list">
+              <li>
+                <span class="footer__schedule-item">12:00 — 20:00</span> середа
+              </li>
+              <li>
+                <span class="footer__schedule-item">12:00 — 20:00</span> четвер
+              </li>
+              <li>
+                <span class="footer__schedule-item">12:00 — 20:00</span> п’ятниця
+              </li>
+              <li>
+                <span class="footer__schedule-item">11:00 — 19:00</span> субота
+              </li>
+              <li>
+                <span class="footer__schedule-item">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+
+            <div class="footer__schedule-weekend">
+              <span class="footer__schedule-item">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу а 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+        
+        <div class="footer__contacts">
+          <div class="footer__contacts-title">
+            Контакти:
+          </div>
+
+          <a 
+            href="https://goo.gl/maps/iCfWXxGWV9VHbbQH8" 
+            target="_blank" 
+            class="footer__contacts-link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+
+          <a href="tel:+380442781357" class="footer__contacts-link">тел. +38 (044) 278-13-57</a>
+
+          <a href="tel:+380442787454" class="footer__contacts-link">факс +38 (044) 278-74-54</a>
+
+          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">e-mail: info@namu.kiev.ua</a>
+        </div>
+
+        <a href="#" class="footer__arrow-up">&#129045;</a>
+
+        <div class="footer__line"></div>
+
+        <ul class="footer__menu-list">
+          <li>
+            <a href="#gallery" class="footer__menu-item">
+              Галерея
+            </a>
+          </li>
+          <li>
+            <a href="#subscribe" class="footer__menu-item">
+              Про Нас
+            </a>
+          </li>
+          <li>
+            <a href="#actualy" class="footer__menu-item">
+              Виставки та події
+            </a>
+          </li>
+          <li>
+            <a href="#contact" class="footer__menu-item">
+              Контакти
+            </a>
+          </li>
+        </ul>
+
+        <div class="footer__bottom">
+          <div class="footer__bottom-text">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+
+          <div class="footer__bottom-text">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
