develop header for all screen (but do not fix problem with menu button)

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+  id="home"
+>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body body">
+    <header class="page__header header">
+      <div class="header__img">
+        <div class="header__content">
+          <div class="header__top-bar">
+            <a href="#menu" class="header__button-menu"></a>
+            <a href="#home" class="header__logo">
+              <img src="./images/logo/logo.png" alt="Logo">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="header__art-museum art-museum">
+          <div class="art-museum__content">
+            <h1 class="art-museum__title">Художній Музей</h1>
+            <a href="#" class="art-museum__button button-main">
+              <p class="button-main__title">Квитки</p>
+              <div class="button-main__arrow"></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="page__main main">
+      
+    </main>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
