--- a/src/index.html
+++ b/src/index.html
@@ -248,29 +248,37 @@
         </h2>
 
         <div class="gallery__images">
-          <img
-            class="gallery__image"
-            src="./images/galery1.jpg"
-            alt="image 1"
-          >
+          <div class="gallery__image-box">
+            <img
+              class="gallery__image"
+              src="./images/galery1.jpg"
+              alt="image 1"
+            >
+          </div>
+          
+          <div class="gallery__image-box">
+            <img
+              class="gallery__image"
+              src="./images/galery2.jpg"
+              alt="image 1"
+            >
+          </div>
 
-          <img
-            class="gallery__image"
-            src="./images/galery2.jpg"
-            alt="image 1"
-          >
-
-          <img
-            class="gallery__image"
-            src="./images/galery3.jpg"
-            alt="image 1"
-          >
-
-          <img
-            class="gallery__image"
-            src="./images/galery4.jpg"
-            alt="image 1"
-          >
+          <div class="gallery__image-box">
+            <img
+              class="gallery__image"
+              src="./images/galery3.jpg"
+              alt="image 1"
+            >
+          </div>
+          
+          <div class="gallery__image-box">
+            <img
+              class="gallery__image"
+              src="./images/galery4.jpg"
+              alt="image 1"
+            >
+          </div>          
 
           <!-- <img
             class="gallery__image"
@@ -397,7 +405,13 @@
           <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">e-mail: info@namu.kiev.ua</a>
         </div>
 
-        <a href="#" class="footer__arrow-up">&#129045;</a>
+        <a href="#" class="footer__arrow-up">
+          <img
+            src="./images/arrow-up.svg"
+            class="footer__arrow-up-icon"
+            alt="instagram"
+          >
+        </a>
 
         <div class="footer__line"></div>
 
